RESOLVED FIXED217492
[Media in GPU Process] Cannot activate or deactivate an audio session
https://bugs.webkit.org/show_bug.cgi?id=217492
Summary [Media in GPU Process] Cannot activate or deactivate an audio session
Peng Liu
Reported 2020-10-08 13:32:58 PDT
[Media in GPU Process] Cannot active or reactive an audio session
Attachments
Patch (3.34 KB, patch)
2020-10-08 13:40 PDT, Peng Liu
no flags
Peng Liu
Comment 1 2020-10-08 13:40:41 PDT
EWS
Comment 2 2020-10-08 16:44:58 PDT
Committed r268231: <https://trac.webkit.org/changeset/268231> All reviewed patches have been landed. Closing bug and clearing flags on attachment 410878 [details].
Radar WebKit Bug Importer
Comment 3 2020-10-08 16:45:22 PDT
Note You need to log in before you can comment on or make changes to this bug.