[Media in GPU Process] Cannot activate or deactivate an audio session https://bugs.webkit.org/show_bug.cgi?id=217492

Reviewed by Eric Carlson.

Source/WebKit:

No new tests, covered by existing tests.

* WebProcess/GPU/media/RemoteAudioSession.cpp:
(WebKit::RemoteAudioSession::tryToSetActiveInternal):

LayoutTests:

* gpu-process/TestExpectations:


Canonical link: https://commits.webkit.org/230266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268231 268f45cc-cd09-0410-ab3c-d52691b4dbfc